# firstOpenGlProject

./: .gitignore  CMakeLists.txt
src/: main.c  sokol_app.h  sokol_gfx.h
